samples/_failures_safe/1761498914_df5cb9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37c5ef6e.c: In function ‘main’:
./samples/SAFE/__tmp_37c5ef6e.c:145:24: error: missing terminating " character
  145 |                 printf("Determinant only supported for matrices up to
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_37c5ef6e.c:145:17: error: expected expression at end of input
  145 |                 printf("Determinant only supported for matrices up to
      |                 ^~~~~~
./samples/SAFE/__tmp_37c5ef6e.c:145:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_37c5ef6e.c:145:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_37c5ef6e.c:145:17: error: expected declaration or statement at end of input
